--- a/gallery/images.qrc
+++ b/gallery/images.qrc
@@ -12,5 +12,70 @@
         <file>images/splitter.svg</file>
         <file>images/text.svg</file>
         <file>images/typography.svg</file>
+        <file>images/affix.svg</file>
+        <file>images/alert.svg</file>
+        <file>images/anchor.svg</file>
+        <file>images/autocomplete.svg</file>
+        <file>images/avatar.svg</file>
+        <file>images/backtop.svg</file>
+        <file>images/badge.svg</file>
+        <file>images/breadcrumb.svg</file>
+        <file>images/calendar.svg</file>
+        <file>images/card.svg</file>
+        <file>images/carousel.svg</file>
+        <file>images/cascader.svg</file>
+        <file>images/checkbox.svg</file>
+        <file>images/collapse.svg</file>
+        <file>images/color-picker.svg</file>
+        <file>images/color-picker-panel.svg</file>
+        <file>images/date-picker.svg</file>
+        <file>images/date-picker-panel.svg</file>
+        <file>images/datetime-picker.svg</file>
+        <file>images/descriptions.svg</file>
+        <file>images/dialog.svg</file>
+        <file>images/divider.svg</file>
+        <file>images/drawer.svg</file>
+        <file>images/dropdown.svg</file>
+        <file>images/empty.svg</file>
+        <file>images/form.svg</file>
+        <file>images/image.svg</file>
+        <file>images/infinite-scroll.svg</file>
+        <file>images/input.svg</file>
+        <file>images/input-number.svg</file>
+        <file>images/input-tag.svg</file>
+        <file>images/loading.svg</file>
+        <file>images/mention.svg</file>
+        <file>images/menu.svg</file>
+        <file>images/message.svg</file>
+        <file>images/message-box.svg</file>
+        <file>images/notification.svg</file>
+        <file>images/page-header.svg</file>
+        <file>images/pagination.svg</file>
+        <file>images/popconfirm.svg</file>
+        <file>images/popover.svg</file>
+        <file>images/progress.svg</file>
+        <file>images/radio.svg</file>
+        <file>images/rate.svg</file>
+        <file>images/result.svg</file>
+        <file>images/segmented.svg</file>
+        <file>images/select.svg</file>
+        <file>images/skeleton.svg</file>
+        <file>images/slider.svg</file>
+        <file>images/statistic.svg</file>
+        <file>images/steps.svg</file>
+        <file>images/switch.svg</file>
+        <file>images/table.svg</file>
+        <file>images/tabs.svg</file>
+        <file>images/tag.svg</file>
+        <file>images/timeline.svg</file>
+        <file>images/time-picker.svg</file>
+        <file>images/time-select.svg</file>
+        <file>images/tooltip.svg</file>
+        <file>images/tour.svg</file>
+        <file>images/transfer.svg</file>
+        <file>images/tree.svg</file>
+        <file>images/tree-select.svg</file>
+        <file>images/upload.svg</file>
+        <file>images/watermark.svg</file>
     </qresource>
 </RCC>
